git merge developer usuario2

--- a/practica1Home/modificacion Contenido.html
+++ b/practica1Home/modificacion Contenido.html
@@ -57,7 +57,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <!-- Modificación de comentario para git branch => usuario2 -->
   <script>
     console.log("eh")
     window.ga = function () {
