--- a/practica1Home/modificacion Atributos.html
+++ b/practica1Home/modificacion Atributos.html
@@ -29,7 +29,7 @@
 
 <body>
 
-  <!-- Modificación de comentario para git branch => addevelop -->
+  <!-- Modificación de comentario para git branch => usuario2 -->
 
   <ul>
     <li><a  href="#home">Home</a></li>
