MOTIVO DEL COMMIT: Hooks; IMPLEMENTACIÓN: Carpeta hooks

--- a/practica1Home/index.html
+++ b/practica1Home/index.html
@@ -48,7 +48,7 @@ Este curso es una Formación Profesional de grado superior para aprender a desar
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-
+amàgat
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     console.log("eh")
